objects/maps__LiveWorkingHours__c.object
<CustomObject>
    <fields>
        <fullName>maps__FridayEndTime__c</fullName>
        <label>Friday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__FridayStartTime__c</fullName>
        <label>Friday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field must be selected Active in order to designate Live Working Hours</description>
        <inlineHelpText>This field must be selected Active in order to designate Live Working Hours</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MondayEndTime__c</fullName>
        <label>Monday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__MondayStartTime__c</fullName>
        <label>Monday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SaturdayEndTime__c</fullName>
        <label>Saturday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SaturdayStartTime__c</fullName>
        <label>Saturday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SundayEndTime__c</fullName>
        <label>Sunday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SundayStartTime__c</fullName>
        <label>Sunday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__ThursdayEndTime__c</fullName>
        <label>Thursday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__ThursdayStartTime__c</fullName>
        <label>Thursday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__TuesdayEndTime__c</fullName>
        <label>Tuesday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__TuesdayStartTime__c</fullName>
        <label>Tuesday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__WednesdayEndTime__c</fullName>
        <label>Wednesday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__WednesdayStartTime__c</fullName>
        <label>Wednesday Start Time</label>
        <type>Time</type>
    </fields>
    <label>Maps Live Working Hours</label>
    <nameField>
        <label>Maps Live Working Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>